# SolidityDefend

./: .actrc  .dockerignore  .gitignore  .pre-commit-config.yaml  .soliditydefend.yml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  Dockerfile  Dockerfile.dev  INSTALL_README.md  LICENSE  LICENSE-APACHE  LICENSE-MIT  LOCAL_CI_GUIDE.md  Makefile  NEXT_STEPS.md  NOTICE  PHASE7_FP_REDUCTION_REPORT.md  PHASE8_FP_REDUCTION_REPORT.md  PRODUCT_TIERS.md  README.md  RELEASE_SETUP_SUMMARY.md  clippy.toml  docker-compose.yml  install.sh  json  package-lock.json  rustfmt.toml  smartbugs_validation_report.md
crates/analysis/: Cargo.toml
crates/analysis/src/: engine.rs
crates/analysis/tests/: basic_tests.rs  integration_tests.rs  mod.rs  performance_benchmarks.rs  regression_tests.rs  test_fixtures.rs  vault_inflation_detector_tests.rs
crates/ast/: Cargo.toml
crates/ast/src/: arena.rs  lib.rs  location.rs  nodes.rs  visitor.rs
crates/cache/: Cargo.toml
crates/cache/src/: analysis_cache.rs  file_cache.rs  lib.rs  query_cache.rs
crates/cfg/: Cargo.toml
crates/cfg/src/: analysis.rs  blocks.rs  builder.rs  dominance.rs  graph.rs  lib.rs
crates/cli/: Cargo.toml
crates/cli/src/: app.rs  config.rs  exit_codes.rs  lib.rs  url_fetcher.rs  url_fetcher_tests.rs
crates/dataflow/: Cargo.toml
crates/dataflow/src/: analysis.rs  def_use.rs  framework.rs  lib.rs  live_variables.rs  reaching_definitions.rs  taint.rs
crates/db/: Cargo.toml
crates/db/src/: database.rs  lib.rs  queries.rs
crates/detectors/: Cargo.toml
crates/detectors/src/: aa_account_takeover.rs  aa_bundler_dos.rs  aa_initialization_vulnerability.rs  aa_nonce_management.rs  aa_session_key_vulnerabilities.rs  aa_signature_aggregation.rs  aa_social_recovery.rs  access_control.rs  accesscontrol_race_condition.rs  advanced_security_engine.rs  allowance_toctou.rs  amm_k_invariant_violation.rs  amm_liquidity_manipulation.rs  array_length_mismatch.rs  auction_timing.rs  auth.rs  backrunning_opportunity.rs  batch_cross_function_reentrancy.rs  batch_transfer_overflow.rs  beacon_single_point_of_failure.rs  beacon_upgrade_unprotected.rs  blob_data_manipulation.rs  block_stuffing_vulnerable.rs  blockhash_randomness.rs  bridge_chain_id_validation.rs  bridge_merkle_bypass.rs  bridge_message_verification.rs  bridge_token_minting.rs  bundle_inclusion_leak.rs  callback_in_callback_loop.rs  centralization_risk.rs  chainlink_vrf_misuse.rs  challenge_period_bypass.rs  circular_dependency.rs  clones_immutable_args_bypass.rs  commit_reveal_timing.rs  compound_callback_chain.rs  constructor_reentrancy.rs  contract_recreation_attack.rs  create2_address_collision.rs  (+211 more)
crates/detectors/tests/: fp_audit_test.rs  fp_regression_tests.rs  test_front_running.rs
crates/fixes/: Cargo.toml
crates/fixes/src/: lib.rs  replacements.rs
crates/ir/: Cargo.toml
crates/ir/src/: instruction.rs  lib.rs  lowering.rs
crates/lsp/: Cargo.toml
crates/lsp/src/: code_actions.rs  lib.rs  server.rs
crates/output/: Cargo.toml
crates/output/src/: console.rs  json.rs  lib.rs  sarif.rs  summary.rs
crates/parser/: Cargo.toml
crates/parser/src/: arena.rs  error.rs  lib.rs  recovery.rs
crates/performance/: Cargo.toml
crates/performance/src/: dependency.rs  incremental.rs  lib.rs  memory.rs  parallel.rs  streaming.rs
crates/project/: Cargo.toml
crates/project/src/: detector.rs  discovery.rs  lib.rs
crates/project/tests/: integration_tests.rs
crates/resolver/: Cargo.toml
crates/resolver/src/: extractor.rs  graph.rs  lib.rs  remapper.rs  resolver.rs
crates/semantic/: Cargo.toml
crates/semantic/src/: inheritance.rs  lib.rs  resolution.rs  symbols.rs  types.rs
crates/soliditydefend/: Cargo.toml  build.rs
crates/soliditydefend/src/: main.rs  version.rs
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: fuzz_analyzer.rs  fuzz_detectors.rs  fuzz_parser.rs  fuzz_sarif_output.rs  fuzz_solidity_generator.rs
tests/: Cargo.toml  expected_results.md  lib.rs  test_contracts.json  url_analysis_integration_test.rs
tests/advanced_security/: defi_tests.rs  integration_tests.rs  mod.rs
tests/analysis/: false_positives.rs  mod.rs
tests/benchmarks/: benchmark_runner.rs  mod.rs  performance_comparison.rs  regression.rs
tests/common/: mod.rs  test_utils.rs
tests/contracts/: Contract-Vulnerabilities.md  README.md  VULNERABILITY_INVENTORY.md  clean_contract.sol  reentrancy_issues.sol  test_session_key.sol  test_social_recovery.sol
tests/contracts/2025_vulnerabilities/: test_cases.md
tests/contracts/amm_context/: UniswapV2Pair.sol  VulnerableAMMConsumer.sol
tests/contracts/basic_vulnerabilities/: access_control_issues.sol  validation_issues.sol
tests/contracts/critical_vulnerabilities/: CREATE2FrontrunAttack.sol  MetamorphicAttack.sol  PermitExploit.sol  SelfdestructAbuse.sol
tests/contracts/delegatecall/: README.md
tests/contracts/erc4626_vaults/: SecureVault_MinimumDeposit.sol  VulnerableVault_FeeManipulation.sol  VulnerableVault_Inflation.sol  VulnerableVault_WithdrawalDOS.sol
tests/contracts/fp_benchmarks/: README.md  (+4 more)
tests/detectors/: test_access_control.rs  test_logic.rs  test_mev.rs  test_oracle.rs  test_proxy_security.rs  test_reentrancy.rs  test_timestamp.rs  test_validation.rs
tests/developer_experience/: end_to_end_tests.rs  mod.rs
tests/fixtures/: ERC20.sol  MultiSigWallet.sol  UniswapV2Pair.sol
tests/integration/: framework-compatibility-tests.md  test_ci.rs  test_parser.rs
tests/lsp/: test_diagnostics.rs  test_server.rs
tests/metrics/: accuracy.rs  mod.rs  performance.rs
tests/output/: test_console.rs  test_sarif.rs
tests/performance/: comparison.rs  mod.rs  regression.rs  scalability.rs
tests/property/: mod.rs
tests/regression/: mod.rs
tests/unit/: test_arena.rs  test_cfg.rs  test_dataflow.rs  test_fixes.rs  test_incremental.rs  test_ir.rs  test_locations.rs  test_salsa.rs  test_symbols.rs  test_taint.rs
tests/validation/: false_positive_analysis.rs  golden_file_testing.rs  ground_truth.json  ground_truth.rs  integration_runner.rs  mod.rs  regression_tests.rs  smartbugs.rs  solidifi.rs
(+649 files in other folders)
