[package]
name = "soliditydefend-fuzz"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "fuzz_parser"
path = "fuzz_targets/fuzz_parser.rs"

[[bin]]
name = "fuzz_analyzer"
path = "fuzz_targets/fuzz_analyzer.rs"

[[bin]]
name = "fuzz_detectors"
path = "fuzz_targets/fuzz_detectors.rs"

[[bin]]
name = "fuzz_solidity_generator"
path = "fuzz_targets/fuzz_solidity_generator.rs"

[[bin]]
name = "fuzz_sarif_output"
path = "fuzz_targets/fuzz_sarif_output.rs"

[dependencies]
libfuzzer-sys = "0.4"
arbitrary = { version = "1.0", features = ["derive"] }
honggfuzz = "0.5"

# SolidityDefend dependencies (would reference the main crate)
soliditydefend = { path = ".." }

# Additional fuzzing utilities
tempfile = "3.0"
serde_json = "1.0"
regex = "1.0"

[features]
default = []
honggfuzz_fuzz = ["honggfuzz"]
libfuzzer_fuzz = ["libfuzzer-sys"]