[package]
name = "soliditydefend-tests"
version = "0.1.0"
edition = "2021"

[lib]
name = "soliditydefend_tests"
path = "lib.rs"

[[bin]]
name = "benchmark_runner"
path = "benchmarks/benchmark_runner.rs"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }

# Additional dependencies for test infrastructure
sha2 = { workspace = true }
tokio = { version = "1.47", features = ["macros", "rt-multi-thread", "time", "process"] }
which = "7.0"
tempfile = "3.23"

# Testing dependencies
criterion = { workspace = true }
proptest = { workspace = true }

# SolidityDefend crates
parser = { path = "../crates/parser" }
ast = { path = "../crates/ast" }
analysis = { path = "../crates/analysis" }