[package]
name = "ast"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Arena-allocated Abstract Syntax Tree for Solidity"

[dependencies]
bumpalo.workspace = true
serde.workspace = true
internment.workspace = true