[package]
name = "cache"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Caching and incremental analysis"

[dependencies]
db = { path = "../db" }
serde.workspace = true
sha2.workspace = true
blake3.workspace = true
dashmap.workspace = true
anyhow.workspace = true