[package]
name = "cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Command-line interface and configuration"

[dependencies]
detectors = { path = "../detectors" }
output = { path = "../output" }
fixes = { path = "../fixes" }
cache = { path = "../cache" }
parser = { path = "../parser" }
db = { path = "../db" }
ast = { path = "../ast" }
semantic = { path = "../semantic" }
lsp = { path = "../lsp" }
clap.workspace = true
serde.workspace = true
serde_yaml.workspace = true
walkdir.workspace = true
glob.workspace = true
anyhow.workspace = true
tracing.workspace = true
tokio = { version = "1.0", features = ["full"] }
dirs = "5.0"
num_cpus = "1.16"
tempfile = "3.8"
reqwest = { version = "0.11", features = ["json"] }
url = "2.4"
serde_json.workspace = true