[package]
name = "detectors"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Security vulnerability detectors for Solidity smart contracts"

[dependencies]
ast = { path = "../ast" }
semantic = { path = "../semantic" }
# Temporarily disabled due to compilation errors
# cfg = { path = "../cfg" }
# dataflow = { path = "../dataflow" }
# ir = { path = "../ir" }
anyhow.workspace = true
serde.workspace = true
indexmap.workspace = true
rayon.workspace = true
thiserror = "1.0"
regex.workspace = true
log = "0.4"
bumpalo = "3.16"

[dev-dependencies]
parser = { path = "../parser" }