[package]
name = "lsp"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Language Server Protocol implementation"

[dependencies]
detectors = { path = "../detectors" }
fixes = { path = "../fixes" }
tower-lsp.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { version = "1.0", features = ["full"] }