[package]
name = "lsp"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Language Server Protocol implementation"

[dependencies]
ast = { path = "../ast" }
detectors = { path = "../detectors" }
fixes = { path = "../fixes" }
cache = { path = "../cache" }
parser = { path = "../parser" }
semantic = { path = "../semantic" }
tower-lsp.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { version = "1.0", features = ["full"] }
anyhow.workspace = true
dashmap.workspace = true